Css Primera parte

--- a/simple-faq-master/index.html
+++ b/simple-faq-master/index.html
@@ -14,11 +14,21 @@
     <title>Simple FAQ | devChallenges.io</title>
 
     <!--You are welcome to delete these styles or modify them in your own stylesheet -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>frequently asked question</h1>
-      <p><strong>Browser through the most frequently asked question</strong></p>
+      <h1>Frequently Asked Questions</h1>
+      <p>Browser through the most frequently asked question</p>
     </header>
     <main>
       <section>
@@ -34,6 +44,7 @@
         </ol>
         <p>If you encounter any issues, please visit our Help Center.</p>
       </section>
+      <hr />
       <section>
         <h2>What is your return policy?</h2>
         <p>
@@ -42,15 +53,16 @@
         </p>
         <ul>
           <li>
-            <b>Items must be in original condition:</b>Unworn, unused, and
-            unwashed.
+            <strong>Items must be in original condition:</strong>Unworn, unused,
+            and unwashed.
           </li>
           <li>
-            <b>Include original packaging and tags:</b>All items should be
-            returned with their original packaging and tags.
+            <strong>Include original packaging and tags:</strong>All items
+            should be returned with their original packaging and tags.
           </li>
           <li>
-            <b>Proof of purchase:</b>A receipt or proof of purchase is required.
+            <strong>Proof of purchase:</strong>A receipt or proof of purchase is
+            required.
           </li>
         </ul>
         <p>
