--- a/simple-faq-master/index.html
+++ b/simple-faq-master/index.html
@@ -33,31 +33,34 @@
     <main>
       <section>
         <h2>How can I track my order?</h2>
-        <p>You can track your order using the following steps:</p>
-        <ol>
-          <li>Go to the Order <span>Tracking page</span></li>
+        <p class="text1">You can track your order using the following steps:</p>
+        <ol class="ordenada">
+          <li>Go to the Order <a href="">Tracking page</a>.</li>
           <li>Enter your order number and email address.</li>
           <li>
             Click on the Track Order button to view the current status of your
             shipment.
           </li>
         </ol>
-        <p>If you encounter any issues, please visit our Help Center.</p>
+        <p class="text1">
+          If you encounter any issues, please visit our
+          <a href="">Help Center</a>.
+        </p>
       </section>
       <hr />
       <section>
         <h2>What is your return policy?</h2>
-        <p>
+        <p class="text1">
           We offer a 30-day return policy on most items. Here are some key
-          points
+          points:
         </p>
-        <ul>
+        <ul class="desordenada">
           <li>
-            <strong>Items must be in original condition:</strong>Unworn, unused,
-            and unwashed.
+            <strong>Items must be in original condition:</strong> Unworn,
+            unused, and unwashed.
           </li>
           <li>
-            <strong>Include original packaging and tags:</strong>All items
+            <strong>Include original packaging and tags:</strong> All items
             should be returned with their original packaging and tags.
           </li>
           <li>
@@ -65,15 +68,15 @@
             required.
           </li>
         </ul>
-        <p>
+        <p class="text1">
           For more detailed information, read our full
-          <span>Return Policy.</span>
+          <span><a href="">Return Policy.</a></span>
         </p>
       </section>
     </main>
 
     <div class="author-info">
-      Coded by <a href="#">Your Name Here</a> | Challenge by
+      Coded by <a href="#">Brahyam Scharlok</a> | Challenge by
       <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
         >devChallenges.io</a
       >.
